--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
                 <p>
                     <a href="#"><img class="logo" src="assets/images/logo.png"></a>
                 </p>
-                <b>FPT Academy Intenaltional</b>
+                <b style="font-size: 25px;">FPT Academy Intenaltional</b>
                 <p><i class="fa-solid fa-location-dot"></i> Số 8 Tôn Thất Thuyết, Mỹ Đình, TP.HN.</p>
                 <p><i class="fa-solid fa-check"></i> Business registration number: 0106790291. Hanoi Department of Planning and Investment issued on March 16, 2015</p>
                 <a href="http://online.gov.vn/Home/WebDetails/68563"><span><img
