--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,5 @@
 footer {
-    overflow-x: hidden !important;
-    width: 100% !important;
+    width: 100vw !important;
 }
 
 .footer-basic {
@@ -30,7 +29,7 @@ footer {
 .last {
     padding-left: 0;
     line-height: 2;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .social-network {
