--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,25 +8,25 @@
                 <b>FPT Academy Intenaltional</b>
                 <p><i class="fa-solid fa-location-dot"></i> Số 8 Tôn Thất Thuyết, Mỹ Đình, TP.HN.</p>
                 <p><i class="fa-solid fa-check"></i> Business registration number: 0106790291. Hanoi Department of Planning and Investment issued on March 16, 2015</p>
-                <a href="http://online.gov.vn/Home/WebDetails/68563"><span><img
-                            src="https://bookingcare.vn/assets/icon/bo-cong-thuong.svg"></span></a>
-                <a href="http://online.gov.vn/Home/AppDetails/1101"><span><img
-                            src="https://bookingcare.vn/assets/icon/bo-cong-thuong.svg"></span></a>
+                <a href=""><span><img class="bct"
+                            src="https://salavietnam.vn/dataimages/images/20150827110756-dadangky.png"></span></a>
+
             </div>
+
             <div class="col-lg-4 col-md-6 col-12 p-3 center">
-                <p><a href="#">Contact for cooperation</a></p>
+                <p><a routerLink='/contact'>Contact for cooperation</a></p>
                 <p><a href="#">Recruit</a></p>
                 <p><a href="#">Frequently asked questions</a></p>
                 <p><a href="#">Terms of use</a></p>
                 <p><a href="#">Privacy Policy</a></p>
                 <p><a href="#">Complaint handling support process</a></p>
-                <p> <a href="#">Operational Regulations</a></p>
+                <p><a href="#">Operational Regulations</a></p>
             </div>
             <div class="col-lg-4 col-md-6 col-12 p-3 last">
                 <b>Headquarters in Hanoi</b>
                 <p>Số 8 Tôn Thất Thuyết, Mỹ Đình, TP.HN.</p>
                 <b>Customer Support</b>
-                <p>support@bookingcare.vn (7h - 18h)</p>
+                <p>support@techwiz3.vn (7h - 18h)</p>
                 <div class="social-network">
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
