--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -20,6 +20,16 @@ li {
         height: 100%;
         .center-content {
             .child-content {
+                @media (max-width: 1200px) {
+                    div {
+                        b {
+                            font-size: 12px;
+                        }
+                        .sub-title {
+                            font-size: 9px;
+                        }
+                    }
+                }
                 .sub-title {
                     font-size: 12px;
                     font-weight: 400;
@@ -34,7 +44,7 @@ li {
             }
             a {
                 img {
-                    height: 70px;
+                    height: 50px;
                     width: auto;
                     padding: 0 20px;
                 }
