--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -30,7 +30,7 @@
     <owl-carousel-o [options]="slide">
         <ng-template carouselSlide *ngFor="let item of home.homeSlide1">
             <div class="slide px-2">
-                <a href="" class="d-flex justify-content-center row">
+                <a href="">
                     <img src="{{item.image}}">
                     <h5><b class="text-dark">{{item.title}}</b></h5>
                     <div class="row" *ngFor="let item2 of item.description">
@@ -44,10 +44,10 @@
 <div class="medical-online">
     <div class="container py-5">
         <h3>Remote consultation via video</h3>
-        <owl-carousel-o [options]="slide">
+        <owl-carousel-o [options]="staticSlide">
             <ng-template carouselSlide *ngFor="let item of home.homeSlide2">
                 <div class="slide pr-2">
-                    <a href="">
+                    <a routerLink="">
                         <i class="fa-regular fa-video"></i>
                         <img src="{{item.image}}">
                         <h5><span class="text-dark">{{item.title}}</span></h5>
@@ -60,10 +60,10 @@
 <div class="specialist">
     <div class="container py-5">
         <h3>Popular specialties</h3>
-        <owl-carousel-o [options]="slide">
+        <owl-carousel-o [options]="staticSlide">
             <ng-template carouselSlide *ngFor="let item of home.homeSlide3">
                 <div class="slide pr-2">
-                    <a href="" class="d-flex justify-content-center row">
+                    <a href="">
                         <img src="{{item.image}}">
                         <h5><span class="text-dark">{{item.title}}</span></h5>
                     </a>
@@ -75,10 +75,10 @@
 <div class="outstanding-medical-facility">
     <div class="container py-5">
         <h3>Outstanding medical facility</h3>
-        <owl-carousel-o [options]="slide">
+        <owl-carousel-o [options]="staticSlide">
             <ng-template carouselSlide *ngFor="let item of home.homeSlide4">
                 <div class="slide pr-2">
-                    <a href="" class="d-flex justify-content-center row">
+                    <a href="">
                         <img src="{{item.image}}">
                         <h5><span class="text-dark">{{item.title}}</span></h5>
                     </a>
@@ -89,7 +89,7 @@
 </div>
 <div class="container py-5 doctor">
     <h3>Outstanding Doctor</h3>
-    <owl-carousel-o [options]="slide">
+    <owl-carousel-o [options]="staticSlide">
         <ng-template carouselSlide *ngFor="let item of home.homeSlide5">
             <div class="slide">
                 <a href="" class="d-flex justify-content-center row">
