--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -16,7 +16,7 @@
             <div class="col-lg-4 col-md-6 col-12 p-3 center">
                 <p><a href="#">Contact for cooperation</a></p>
                 <p><a href="#">Recruit</a></p>
-                <p><a href="#">Frequently asked questions</a></p>
+                <p><a routerLink="/question">Frequently asked questions</a></p>
                 <p><a href="#">Terms of use</a></p>
                 <p><a href="#">Privacy Policy</a></p>
                 <p><a href="#">Complaint handling support process</a></p>
