--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,14 +4,33 @@
             <div class="offcanvas offcanvas-start" id="subHeader">
                 <div class="offcanvas-header">
                     <a routerLink="">
-                        <img src="../../../assets/images/logo.png" alt="" />
+                        <img style="width:100%;height: 50px" src="../../../assets/images/logo.png" alt="" />
                     </a>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
                 </div>
                 <div class="offcanvas-body">
-                    <p>Some text lorem ipsum.</p>
-                    <p>Some text lorem ipsum.</p>
-                    <p>Some text lorem ipsum.</p>
+                    <ul>
+                        <li><a href="#">Home page</a></li>
+                        <li><a href="#">Handbook</a></li>
+                        <li><a href="#">Cooperation contact</a></li>
+                        <li><a href="#">Recruit</a></li>
+                    </ul>
+                    <h3 class="about-us">ABOUT US</h3>
+                    <ul>
+                       <li><a href="#">For patients</a></li>
+                       <li><a href="#">For doctors</a></li>
+                       <li><a href="#">Role</a></li>
+                       <li><a href="#">Contacts</a></li>
+                       <li><a routerLink="/question">Frequently asked questions</a></li>
+                       <li><a href="#">Terms of use</a></li>
+                       <li><a href="#">Complaint handling process</a></li>
+                       <li><a href="#">Operating regulations</a></li>
+                    </ul>
+                    <div class="social-network">
+                        <a href="#"><i style="color:blue"class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i style="color:rgb(17, 17, 218)"class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i style="color:red" class="fa-brands fa-google-plus"></i></a>
+                    </div>
                 </div>
             </div>
             <i class="fa-solid fa-bars" type="button" data-bs-toggle="offcanvas" data-bs-target="#subHeader"></i>
@@ -35,7 +54,7 @@
                 <a routerLink='/login'><i class="fa-solid fa-user text-dark"></i></a>
             </div>
             <div class="userLogin">
-                <a routerLink='/contact'>contact</a>
+                <a routerLink='/contact'>Contact</a>
             </div>
         </div>
     </div>
