--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="row contact-container container pt-5">
+<div class="row contact-container container py-5">
     <div class="col-6 content-form">
         <h2 class="test">CONTACT FORM</h2>
         <form action="#" method="get">
@@ -29,12 +29,12 @@
         <h2 class="test">CONTACT INFORMATINON</h2>
         <div class="text">
             <div class="row">
-                <div class="col-6 text-6">
+                <div class="col-7 text-6">
                     <p><i class="fa-solid fa-circle-envelope"></i> heathycare@gmail.com</p>
                     <p><i class="fa-solid fa-circle-phone"></i> 01234456789</p>
                     <p><i class="fa-brands fa-facebook"></i> Heathycare/facebook.com</p>
                 </div>
-                <div class="col-6">
+                <div class="col-5">
                     <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.096841491394!2d105.78049781492942!3d21.02881079315237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab4cd0c66f05%3A0xea31563511af2e54!2zOCBUw7RuIFRo4bqldCBUaHV54bq_dCwgTeG7uSDEkMOsbmgsIEPhuqd1IEdp4bqleSwgSMOgIE7hu5lpLCBWaWV0bmFt!5e0!3m2!1sen!2s!4v1660118125943!5m2!1sen!2s" 
                     width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
