--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,7 +21,7 @@
                        <li><a href="#">For doctors</a></li>
                        <li><a href="#">Role</a></li>
                        <li><a href="#">Contacts</a></li>
-                       <li><a routerLink="/question">Frequently asked questions</a></li>
+                       <li><a routerLink="/question" data-bs-dismiss="offcanvas">Frequently asked questions</a></li>
                        <li><a href="#">Terms of use</a></li>
                        <li><a href="#">Complaint handling process</a></li>
                        <li><a href="#">Operating regulations</a></li>
@@ -53,13 +53,9 @@
             <div class="userLogin">
                 <a routerLink='/login'><i class="fa-solid fa-user text-dark"></i></a>
             </div>
-<<<<<<< HEAD
             <div class="userLogin">
                 <a routerLink='/contact'>Contact</a>
             </div>
-=======
-
->>>>>>> f0080630de5db747df032090ffeb1736a8c5eb97
         </div>
     </div>
 </header>
