--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -269,7 +269,10 @@
                         <div id="collapse-4" class="accordion-collapse collapse " aria-labelledby="heading-4"
                             data-bs-parent="#accordion-shipping">
                             <div class="accordion-body">
-                                <p>Have. Please leave information for Healthy Care in the "Support" section.</p>
+                                <p>No. BookingCare does not provide personal information of doctors other than the information posted on the system.</p>
+                                <p>BookingCare is a comprehensive Healthcare Platform that makes it easy for patients to choose the right doctor, service from a network of good specialists, reputable medical facilities, with verified information and to book an appointment fast.</p>
+                                <p>For patients who register for direct examination at a medical facility: After making an appointment, the patient goes to the medical facility to be directly examined, consulted and treated by a doctor.</p>
+                                <p>For patients who register for the "Telemedicine" service: After successfully booking an appointment, the doctor will contact the patient through the BookingCare App.</p>
                             </div>
                         </div>
                     </div>
