--- a/src/app/components/book-an-apointment/book-an-apointment.component.scss
+++ b/src/app/components/book-an-apointment/book-an-apointment.component.scss
@@ -63,15 +63,18 @@ a {
                 border: none;
                 width: 100%;
                 outline: none !important;
-                display: table-cell;
                 background-color: #fff;
                 padding-left: 40px;
+                height: 58px;
             }
             label {
                 margin-left: 25px;
             }
             select {
-                height: 58px;
+                margin-right: 10px;
+                option {
+                    transform: translateX(40px);
+                }
             }
         }
         .payment-details {
