--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,26 +1,28 @@
-.contact-container{
+.contact-container {
     margin: 0 auto;
-    .content-form{
-    .submit-reset{
-        margin-top: 10px;
+    .content-form {
+        .submit-reset {
+            margin-top: 10px;
+        }
     }
-    }
-    .content-information{
-        .text{
+    .content-information {
+        .contact-content {
             padding-top: 25px;
             font-size: 22px;
         }
-        .text-6{
+        .contact-content-6 {
             line-height: 43px;
         }
-    }  
+    }
 }
-.test{
+
+.contact-info {
     position: relative;
     width: fit-content;
 }
-.test::after{
-    content:'';
+
+.contact-info::after {
+    content: "";
     position: absolute;
     width: 0%;
     height: 2px;
@@ -29,6 +31,7 @@
     bottom: 0;
     left: 0;
 }
-.test:hover::after{
-    width: 100%
+
+.contact-info:hover::after {
+    width: 100%;
 }
