--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,5 @@
 a {
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 header {
@@ -37,16 +37,20 @@ li {
             }
         }
         .left-content {
-            i {
+            button {
                 font-size: 20px;
                 color: grey;
                 cursor: pointer;
+                border: none;
+                outline: none;
+                background: transparent;
             }
             a {
+                width: fit-content;
+                position: relative;
                 img {
                     height: 50px;
                     width: auto;
-                    padding: 0 20px;
                 }
             }
         }
@@ -63,39 +67,34 @@ li {
         }
     }
 }
+
 #subHeader {
-    width: 300px;
+    width: 270px;
 }
-.offcanvas-body{
-    font-size: 1.3rem;
-    padding-top: 0!important;
-    padding-left: 0;
-    overflow-x: hidden;
+
+.offcanvas-body {
+    font-size: 1rem;
+    padding: 0 !important;
     ul {
-        padding-left: 0;
-    li{
-        border-bottom: 1px solid #3498db;
-        width: 100vw;
-        padding-top: 10px;
-        a{
-            color: #3498db;
-            padding-left: 1rem;
+        padding: 0;
+        li {
+            border-bottom: 1px #eee solid;
+            padding: 10px 15px;
+            a {
+                color: #3498db;
+            }
+            a:hover {
+                color: rgb(61, 201, 61) !important;
+            }
         }
     }
-    }
-    .about-us {
-        padding-left: 10px;
-        background-color: #f1f1f1;
-        margin: 0;
-        width: 100vw;
-    }
-}
-.social-network {
-    padding: 10px 0 0 40px;
-    a {
-        padding-left: 20px;
-        i {
-            font-size: 40px!important;
+    .about {
+        padding: 10px 0;
+        background-color: #eee;
+        .about-us {
+            width: 100vw;
+            padding: 10px 15px;
+            opacity: 50%;
         }
     }
 }
