--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -37,10 +37,9 @@ li {
             }
         }
         .left-content {
-            button {
+            .open-offcanvas {
                 font-size: 20px;
                 color: grey;
-                cursor: pointer;
                 border: none;
                 outline: none;
                 background: transparent;
