--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,19 +18,19 @@
                 </button>
             </div>
             <div class="col-12 login-input forgot-password">
-                <a href=""> Forgot your password ? </a>
+                <a routerLink=""> Forgot your password ? </a>
             </div>
             <div class="col-12">
                 <h5 class="text-center"> Or Login with : </h5>
             </div>
             <div class="col-12 social-login">
-                <a href="">
+                <a routerLink="">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
-                <a href="">
+                <a routerLink="">
                     <i class="fa-brands fa-google-plus"></i>
                 </a>
-                <a href="">
+                <a routerLink="">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
             </div>
