--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="home-header-container container">
     <div class="home-header-content row d-flex justify-content-center">
         <div class="left-content d-flex justify-content-start align-items-center col-6 col-md-6 col-lg-3">
-            <button class="fa-solid fa-bars d-flex align-items-center pr-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#subHeader"></button>
+            <button class="open-offcanvas fa-solid fa-bars d-flex align-items-center pr-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#subHeader"></button>
             <a routerLink="">
                 <img src="../../../assets/images/logo.png" alt="" />
             </a>
@@ -15,22 +15,22 @@
                 <div class="offcanvas-body">
                     <ul>
                         <li><a routerLink="" data-bs-dismiss="offcanvas">Home page</a></li>
-                        <li><a href="#" data-bs-dismiss="offcanvas">Handbook</a></li>
-                        <li><a href="#" data-bs-dismiss="offcanvas">Cooperation contact</a></li>
-                        <li><a href="#" data-bs-dismiss="offcanvas">Recruit</a></li>
+                        <li><a routerLink="#" data-bs-dismiss="offcanvas">Handbook</a></li>
+                        <li><a routerLink="#" data-bs-dismiss="offcanvas">Cooperation contact</a></li>
+                        <li><a routerLink="#" data-bs-dismiss="offcanvas">Recruit</a></li>
                     </ul>
                     <div class="about">
                         <b class="about-us">About us</b>
                     </div>
                     <ul>
-                        <li><a href="#" data-bs-dismiss="offcanvas">For patients</a></li>
-                        <li><a href="#" data-bs-dismiss="offcanvas">For doctors</a></li>
-                        <li><a href="#" data-bs-dismiss="offcanvas">Role</a></li>
+                        <li><a routerLink="#" data-bs-dismiss="offcanvas">For patients</a></li>
+                        <li><a routerLink="#" data-bs-dismiss="offcanvas">For doctors</a></li>
+                        <li><a routerLink="#" data-bs-dismiss="offcanvas">Role</a></li>
                         <li><a routerLink='/contact' data-bs-dismiss="offcanvas">Contact</a></li>
                         <li><a routerLink="/question" data-bs-dismiss="offcanvas">Frequently asked questions</a></li>
-                        <li><a href="#" data-bs-dismiss="offcanvas">Terms of use</a></li>
-                        <li><a href="#" data-bs-dismiss="offcanvas">Complaint handling process</a></li>
-                        <li><a href="#" data-bs-dismiss="offcanvas">Operating regulations</a></li>
+                        <li><a routerLink="#" data-bs-dismiss="offcanvas">Terms of use</a></li>
+                        <li><a routerLink="#" data-bs-dismiss="offcanvas">Complaint handling process</a></li>
+                        <li><a routerLink="#" data-bs-dismiss="offcanvas">Operating regulations</a></li>
                     </ul>
                 </div>
             </div>
@@ -45,7 +45,7 @@
         </div>
         <div class="right-content d-flex justify-content-end align-items-center col-6 col-md-6 col-lg-2">
             <div class="support d-none d-md-block">
-                <i class="fa-solid fa-circle-question"></i> <a href="">&ensp;Support</a>
+                <i class="fa-solid fa-circle-question"></i> <a routerLink="">&ensp;Support</a>
             </div>
             <div class="userLogin">
                 <a routerLink='/login'><i class="fa-solid fa-user text-dark"></i></a>
