--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -30,7 +30,7 @@
     <owl-carousel-o [options]="slide">
         <ng-template carouselSlide *ngFor="let item of home.homeSlide1">
             <div class="slide pr-2">
-                <a href="">
+                <a routerLink="">
                     <img src="{{item.image}}">
                     <h5><b class="text-dark">{{item.title}}</b></h5>
                     <div class="row" *ngFor="let item2 of item.description">
@@ -63,7 +63,7 @@
         <owl-carousel-o [options]="staticSlide">
             <ng-template carouselSlide *ngFor="let item of home.homeSlide3">
                 <div class="slide pr-2">
-                    <a href="">
+                    <a routerLink="">
                         <img src="{{item.image}}">
                         <h5><span class="text-dark">{{item.title}}</span></h5>
                     </a>
@@ -78,7 +78,7 @@
         <owl-carousel-o [options]="staticSlide">
             <ng-template carouselSlide *ngFor="let item of home.homeSlide4">
                 <div class="slide pr-2">
-                    <a href="">
+                    <a routerLink="">
                         <img src="{{item.image}}">
                         <h5><span class="text-dark">{{item.title}}</span></h5>
                     </a>
