--- a/src/app/components/appointments/appointments.component.html
+++ b/src/app/components/appointments/appointments.component.html
@@ -34,13 +34,13 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 address-clinics pt-3">
-                <p class="text-muted">
-                    ADDRESS OF EXAMINATION
+                <p class="text-dark">
+                    <b>ADDRESS OF EXAMINATION</b>
                 </p>
-                <p><b>Yen Hoa Specialty Clinic</b></p>
+                <p><b class="text-success">Yen Hoa Specialty Clinic</b></p>
                 <p>No. 11 i4, alley 37 Tran Kim Xuyen, Yen Hoa New Urban Area, Yen Hoa, Cau Giay, Hanoi</p>
                 <hr>
-                <p><span class="text-muted">EXAMINATION PRICE:</span> 300,000 VND - 360,000 VND.</p>
+                <p><span class="text-dark"><b>EXAMINATION PRICE</b>:</span> 300,000 VND - 360,000 VND.</p>
             </div>
         </div>
     </div>
@@ -55,5 +55,5 @@
             </div>
         </div>
     </div>
-    <app-feedback></app-feedback>
 </main>
+<app-feedback></app-feedback>
