--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
-<header class="home-header-container container">
-    <div class="home-header-content row d-flex justify-content-center">
+<header class="home-header-container sticky-top d-flex justify-content-center">
+    <div class="home-header-content row d-flex justify-content-center container">
         <div class="left-content d-flex justify-content-start align-items-center col-6 col-md-6 col-lg-3">
             <button class="open-offcanvas fa-solid fa-bars d-flex align-items-center pr-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#subHeader"></button>
             <a routerLink="">
@@ -25,7 +25,6 @@
                     <ul>
                         <li><a routerLink="#" data-bs-dismiss="offcanvas">For patients</a></li>
                         <li><a routerLink="#" data-bs-dismiss="offcanvas">For doctors</a></li>
-                        <li><a routerLink="#" data-bs-dismiss="offcanvas">Role</a></li>
                         <li><a routerLink='/contact' data-bs-dismiss="offcanvas">Contact</a></li>
                         <li><a routerLink="/question" data-bs-dismiss="offcanvas">Frequently asked questions</a></li>
                         <li><a routerLink="#" data-bs-dismiss="offcanvas">Terms of use</a></li>
@@ -50,10 +49,6 @@
             <div class="userLogin">
                 <a routerLink='/login'><i class="fa-solid fa-user text-dark"></i></a>
             </div>
-<<<<<<< HEAD
-
-=======
->>>>>>> 526f23468b5dbe721455cc86c07f78faf542e2ec
         </div>
     </div>
 </header>
