--- a/src/app/components/book-an-apointment/book-an-apointment.component.html
+++ b/src/app/components/book-an-apointment/book-an-apointment.component.html
@@ -120,12 +120,12 @@
             <input type="text" class="form-control" id="address" placeholder="." name="address" />
             <label for="address">Address</label>
         </div>
-        <div class="input-form form-floating mb-3 mt-3">
+        <div class="input-form form-floating mt-3 mt-3">
             <i class="fa-solid fa-question"></i>
             <input type="text" class="form-control" id="reason" placeholder="." name="reason" />
             <label for="reason">Medical examination reason</label>
         </div>
-        <div class="payment-details row my-3 py-1">
+        <div class="payment-details row py-3 py-1">
             <div class="row py-2">
                 <b class="col-6 d-flex justify-content-start">Giá khám</b>
                 <div class="text-success col-6 d-flex justify-content-end">360.000đ</div>
@@ -140,7 +140,7 @@
                 <div class="text-danger col-6 d-flex justify-content-end">360.000đ</div>
             </div>
         </div>
-        <div class="attention my-3 p-2">
+        <div class="attention py-3 p-2">
             <p><b>
             Attention
           </b></p>
